# init-pyproject

./: README.md  pyproject.toml
.github/workflows/: manual.publish-pypi.yml  reusable.check-version.yml  reusable.run-tests.yml  reusable.tag-commit.yml  workflow.on-pr-merge.yml  workflow.on-pr.yml
src/init_pyproject/: cli.py  scaffold.py
src/init_pyproject/template_lib/setuptools/: template_properties.yaml
src/init_pyproject/template_lib/setuptools/template/:  README.md.template  pyproject.toml.template
src/init_pyproject/template_lib/setuptools/template/test/: test_main.py
src/perigramma/: cli.py  properties.py  registry.py  scaffold.py
src/perigramma/template_lib/setuptools_pyproject/template/test/: test_main.py
src/perigramma/templaters/: base.py  jinja.py  pystring.py
src/skaf/: cli.py  scaffold.py  variables.py
src/skaf/scaffold/: scaffold.py
src/templater/: cli.py  registry.py  scaffold.py
src/templater/template_classes/: base.py  filesystem_template.py
src/templater/template_lib/setuptools_pyproject/template/: pyproject.toml.template
test/: conftest.py  test.sh  test_cli.py  test_scaffold.py  test_template_classes.py
