[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "init-pyproject"
version = "0.1.0"
description = "A tool to scaffold a Python project with a pyproject.toml file"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "pyyaml >= 6.0",
]

[project.scripts]
init-pyproject = "init_pyproject.cli:main"

[tool.setuptools.package-data]
init_pyproject = ["templates/*.toml"]
