[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perigramma"
version = "0.1.0"
description = "A tool to scaffold a projects from templates"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "John Raines", email = "johndanielraines@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "pyyaml >= 6.0",
]

[project.scripts]
perigramma = "perigramma.cli:main"

[tool.setuptools.package-data]
perigramma = ["template_lib/*.*"]

[project.entry-points."perigramma.template"]
none = "perigramma.template_classes._none:none_template"
